<resources>
    <string name="app_name">My Application</string>
    <string name="head1">Next page</string>
    <string name="head2">Hello World! Welcome ji finally</string>
    <string name="head_dp">दर्शन पाठ</string>
    <string name="head_puja">पुजा</string>
    <string name="head_ar">अर्घ्य</string>
    <string name="head_st">स्तुति</string>
    <string name="head_sam">सामायिक</string>
    <string name="head_aar">आरती</string>
    <string name="head_str">स्तोत्र</string>
    <string name="head_bha">भजन</string>
    <string name="d_p">  ॐ जय जय जय ॥ निस्सहि निस्सहि निस्सहि ॥ \n
        निस्संगोऽहं जिनानां सदनमनुपमं त्रिः परीत्यैत्य भक्त्या | \n
        स्थित्वा गत्वा निषद्योश्वरणपरिणतोंऽतः शनैर्हस्तयुग्मम् ॥ \n
        भाले संस्थाप्य बुद्धया मम दुरितहरं कीर्तये शक्रवन्धम् । \n
        निदादूर सदाप्तं क्षयरहितमुं ज्ञानभानुं जिनेंद्रम् ॥१॥ \n
        दर्शनं देवदेवस्य । दर्शनं पापनाशनं ॥ \n
        दर्शनं स्वर्गसोपानं । दर्शनं मोक्षसाधनम् ॥२॥ \n
        दर्शनेन जिनेंद्राणां साधूनां वन्दनेन च । \n
        न चिरं तिष्ठते पापं छिद्रहस्ते यथोदकम् ॥३॥ \n
        वीतरागमुखं दृष्ट्वा । पद्मरागसमप्रभम् ॥ \n
        जन्मजन्मकृतं पापं दर्शनेन विनश्यति ॥४॥ \n
        दर्शनं जिनसूर्यस्य । संसारध्वांतनाशनम् ॥ \n
        बोधनं चित्तपयस्य । समस्तार्थप्रकाशनम् ॥५॥ \n
        वर्शनं जिनचंद्रस्य । सद्धर्मामृतवर्षणम् ॥ \n
        जन्मदाहविनाशाय । वर्धनं सुखवारिधेः ॥६॥ \n
        जीवादितत्यप्रतिवर्शकाय । सम्यक्त्वमुख्याष्ट्गुणाश्रयाय ॥ \n
        प्रशांतरूपाय दिगंबराय । देवाधिदेवाय नमो जिनाय ॥७॥ \n
        चिदानदैकरूपाय | जिनाय परमात्मने परमात्मप्रकाशाय । \n
        नित्यं सिद्धात्मने नमः ॥८॥ \n
        अन्यथा शरणं नास्ति । त्वमेव शरणं मम । \n
        तस्मात्कारुण्यभावेन । रक्ष रक्ष जिनेश्वर ||९|| \n
        नहि त्राता नहि त्राता । नहि त्राता जगत्त्रये । \n
        वीतरागात्परो देवो । न भूतो न भविष्यति ॥१०॥ \n
        जिने भक्तिर्जिने भक्तिर्जिने भक्तिर्दिने दिने ॥ \n
        सदा मेऽस्तु सदा मेऽस्तु । सदाऽमेस्तु भवे भवे ॥११॥ \n
        जिने भक्तिर्जिने भक्तिर्जिने भक्तिः सदास्तु मे । \n
        सम्यक्त्वमेव संसारवारणं मोक्षकारणं ॥१२॥ \n
        श्रुते भक्तिः श्रुते भक्ति: श्रुते भक्ति: सदास्तु मे । \n
        सज्ञानमेव संसारवारणं मोक्षकारणं ॥१३॥ \n
        गुरौ भक्तिगुरौ भक्तिगुरौ भक्तिः सदास्तु मे । \n
        चारित्रमेव संसारवारणं मोक्षकारणं ॥१४॥ \n
        जिनधर्मविनिर्मुक्तो मा भवेयं चक्रवर्त्यपि । \n
        सचितोऽपि दरिद्रोऽपि । जिनधर्मनिवासितः ॥१५॥ \n
        जन्मजन्मकृतं पापं । जन्मकोट्यामुपार्जितम् । \n
        जन्ममृत्युजरात हन्यते जिनवन्दनात ॥१६॥ \n
    </string>
    <string name="title_activity_main22">Main22Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
